force-app/main/default/objects/Project_Feature__c/Project_Feature__c.object-meta.xml
<CustomObject>
    <label>Project Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>