force-app/main/default/objects/Project_Feature__c/fields/Completed_Effort__c.field-meta.xml
<CustomField>
    <fullName>Completed_Effort__c</fullName>
    <inlineHelpText>Sum of estimate where WI is &apos;Deployed&apos;.</inlineHelpText>
    <label>Total Completed Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>