force-app/main/default/objects/Project_Feature__c/fields/Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Project__c</fullName>
    <formula>Project__c = LEFT($Setup.R3_Settings__c.ProjectId__c, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Project</label>
    <type>Checkbox</type>
</CustomField>