force-app/main/default/objects/Project_Feature__c/fields/Est_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Cost__c</fullName>
    <formula>Total_Est__c *  Project__r.Proposal_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>