force-app/main/default/objects/Project_Feature__c/fields/Num_of_Accepted_WIs__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Accepted_WIs__c</fullName>
    <label>Num of Accepted WIs</label>
    <summaryFilterItems>
        <field>Work_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>