force-app/main/default/objects/Project_Feature__c/fields/Num_of_Blocked_WIs__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Blocked_WIs__c</fullName>
    <label>Num of Blocked WIs</label>
    <summaryFilterItems>
        <field>Work_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Blocked</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>