force-app/main/default/objects/Project_Feature__c/fields/Original_Est_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Original_Est_Hrs__c</fullName>
    <label>Original Est. Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>