force-app/main/default/objects/Project_Feature__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Project Features</relationshipLabel>
    <relationshipName>Project_Features</relationshipName>
    <type>Lookup</type>
</CustomField>