force-app/main/default/objects/Project_Feature__c/fields/Total_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort__c</fullName>
    <inlineHelpText>Total estimated effort (hours)</inlineHelpText>
    <label>Total Effort [DEPRECATED]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>