force-app/main/default/objects/Project_Feature__c/fields/Total_Est__c.field-meta.xml
<CustomField>
    <fullName>Total_Est__c</fullName>
    <label>Total Est</label>
    <summarizedField>Work_Item__c.Est_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Work_Item__c.Is_Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>