force-app/main/default/objects/Project_Feature__c/fields/Total_Logged__c.field-meta.xml
<CustomField>
    <fullName>Total_Logged__c</fullName>
    <inlineHelpText>Total actual time logged</inlineHelpText>
    <label>Total Logged</label>
    <summarizedField>Work_Item__c.Time_Logged__c</summarizedField>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>