force-app/main/default/objects/Project_Feature__c/fields/Work_Item_Complete_Total__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Complete_Total__c</fullName>
    <label>Work Item Complete Total</label>
    <summarizedField>Work_Item__c.Time_Logged__c</summarizedField>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>