force-app/main/default/objects/Project_Feature__c/fields/Work_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Count__c</fullName>
    <label>Work Item Count</label>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>