force-app/main/default/objects/Project_Feature__c/fields/Work_Item_In_Flight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_In_Flight_Percentage__c</fullName>
    <formula>( Work_Item_Incomplete_Total__c / (Work_Item_Complete_Total__c +  Work_Item_Incomplete_Total__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item In Flight Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>