force-app/main/default/objects/Project_Feature__c/fields/Work_Item_Incomplete_Total__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Incomplete_Total__c</fullName>
    <label>Work Item Incomplete Total</label>
    <summarizedField>Work_Item__c.Remaining_Budget_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Work_Item__c.Is_Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Work_Item__c.Status__c</field>
        <operation>contains</operation>
        <value>Backlog, Under Analysis, Ready, Approved, Blocked, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Work_Item__c.Feature__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>