force-app/main/default/objects/Project_Feature__c/fields/Work_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Total__c</fullName>
    <description>This includes only work items in stages Approved or beyond</description>
    <formula>Work_Item_Complete_Total__c +  Work_Item_Incomplete_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>