force-app/main/default/objects/Project_Feature__c/listViews/Current_Project_Features.listView-meta.xml
<ListView>
    <fullName>Current_Project_Features</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Total_Effort__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Project Features</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>