force-app/main/default/objects/Project_Feature__c/listViews/Kindsight_All_Features.listView-meta.xml
<ListView>
    <fullName>Kindsight_All_Features</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Completed_Effort__c</columns>
    <columns>Total_Effort__c</columns>
    <columns>Completion__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>startsWith</operation>
        <value>Jacob</value>
    </filters>
    <label>Kindsight - All Features</label>
    <sharedTo></sharedTo>
</ListView>